<resources>

    <!--Version Mode Trial or Cost -->
    <bool name="mode_trial">false</bool>

    <!--To set the max limit of contacts -->
    <integer name="max_contacts">5</integer>
    <string name="default_sensibility">50</string>
    <integer name="min_required_sensibility_int">20</integer>
    <string name="symb_percentage">%</string>

    <!-- Maps template link-->
    <string name="url_gmaps">https://maps.google.com/?q=19.468998,-98.881996</string>

    <!-- TRANSLATE -->
    <string name="app_name">Help Me</string>
    <string name="subject_email_app">Panic Button Message</string>>
    <string name="action_settings">About</string>

    <!-- Menu labels-->
    <string name="button">Button</string>
    <string name="conf">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="email_hint">example@email.com</string>
    <string name="phone_hint">00-0000-0000</string>
    <string name="label_add">Add</string>
    <string name="label_remove">Remove</string>


    <!-- title name from each tab-->
    <string name="title_1">Button</string>
    <string name="title_2">Contacts</string>
    <string name="title_3">Settings</string>

    <!-- Log Messages -->
    <string name="email_sending">Sending Email...</string>
    <string name="error">ERROR:</string>

    <!-- Messages and texts-->
    <string name="disabled">Disabled</string>
    <string name="active">Active</string>
    <string name="contacts_limit">contacts is the limit</string>
    <string name="no_contacts_msg">There are no contacts</string>
    <string name="section_notification">Notifications</string>
    <string name="email_subject">Help me application</string>
    <string name="section_shake">Shake</string>
    <string name="tv_lb_message">Message:</string>
    <string name="tv_lb_email">Email </string>
    <string name="tv_lb_sensibility">Sensibility</string>
    <string name="tv_lb_gmail_user">Gmail account:</string>
    <string name="tv_lb_password">Password:</string>
    <string name="hint_password">password</string>
    <string name="alert_opt_not">No</string>
    <string name="alert_opt_yes">Yes</string>
    <string name="msg_email_notification">Email Notifications</string>
    <string name="alert_message_gmail_notification">
        This will enable notifications through your gmail account only. \n\n Would you like to continue ?
    </string>
    <string name="service_notification_section_tv">Service</string>
    <string name="gmail_subject">Panic Button Message</string>
    <string name="gmail_default_message">prueba de mensajes multiples</string>
    <string name="dialog_activating">Activating</string>
    <string name="dialog_wait">Please wait...</string>
    <string name="sms_error_message">SMS failed, try again</string>

    <string name="default_sms_text">Please help me, I am in troubles, this is my last location </string>
    <string name="contact_notification">You are receiving this message because you are one emergency contact from this number </string>


</resources>
