<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/gmail_login_ll"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_fields"
        android:paddingLeft="@dimen/margin_right"
        android:paddingTop="@dimen/margin_fields">

        <TextView
            android:layout_width="@dimen/width_fields"
            android:layout_height="wrap_content"
            android:text="@string/tv_lb_gmail_user"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_email_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_right"
            android:background="@null"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <include layout="@layout/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_fields"
        android:paddingLeft="@dimen/margin_right"
        android:paddingTop="@dimen/margin_fields">

        <TextView
            android:layout_width="@dimen/width_fields"
            android:layout_height="wrap_content"
            android:text="@string/tv_lb_password"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_password_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_right"
            android:background="@null"
            android:maxLength="16"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size"/>

        <ImageView
            android:id="@+id/img_visivility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_right"
            android:src="@drawable/ic_visibility_off_black_24dp"/>

    </LinearLayout>

    <include layout="@layout/div"/>
</LinearLayout>